--- a/html/index.html
+++ b/html/index.html
@@ -15,13 +15,13 @@
     <link rel="stylesheet" href="https://cdn.usebootstrap.com/bootstrap/4.4.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/index.css">
     <link rel="stylesheet" href="../css/index-animation.css">
-    
+
     <!-- AOS -->
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
-    <link rel="shortcut icon" href="../img/logo/favicon.ico"/>
-    <link rel="bookmark" href="../img/logo/favicon.ico"/>
+    <link rel="shortcut icon" href="../img/logo/favicon.ico" />
+    <link rel="bookmark" href="../img/logo/favicon.ico" />
 
 </head>
 <style>
@@ -54,77 +54,80 @@
         </div>
 
 
-        <div><h2 class = "h2intro">Welcome To KAIMAU.</h2></div>
-        <div class="indexanimate">
-            <div class = "overlay"></div>
-            <img class = "animateImagebg" src="../img/indexanimation/004.jpg" type="img/jepg"/>
-          <div id="animation-bg"></div>
-          
+        <div>
+            <h2 class="h2intro">Welcome To KAIMAU.</h2>
         </div>
-        <div class = "introContent">
+        <div class="indexanimate">
+            <div class="overlay"></div>
+            <img class="animateImagebg" src="../img/indexanimation/004.jpg" type="img/jepg" />
+            <div id="animation-bg"></div>
+
+        </div>
+        <div class="introContent">
             <div data-aos="fade-up">
-                <h2 class = "h2intro01">Take KAIMAU,<br>Take the Future.</h2>
-                <h2 class = "h2intro02">凱茂資訊</h2>
+                <h2 class="h2intro01">Take KAIMAU,<br>Take the Future.</h2>
+                <h2 class="h2intro02">凱茂資訊</h2>
             </div>
         </div>
 
 
         <!-- 服務項目 -->
         <div class="container-fluid indexService">
-        <div class="container" style="margin-top:2150px">
-            <div class="row">
-                <div class="col-lg-6">
-                    <div class = "ServiceContent">
-                        <h1 class="indexh1">WHAT WE<br>DO.
-                            <h2 class="indexh2">服務項目</h2>
-                            <p class="indexp">青山依舊在，幾度夕陽紅。慣看秋月春風。一壺濁酒喜相逢，浪花淘盡英雄。是非成敗轉頭空，滾滾長江東逝水，白髮漁樵江渚上，古今多少事，都付笑談中。
-                            </p>
-                            <button class="roundbutton" onclick="window.location.href='./Words.html'">查看更多</button>
-                    </div>
-                    <div id = "Service01" class="indexContent">
-                        <img class ="indexicon" src="../img/index/icon01.png">
-                        <h3 class="indexh3">軟體銷售服務</h3>
-                        <p class="indexp">微軟授權、防毒軟體、Adobe授權、繪圖軟體授權、虛擬化軟體、開發工具軟體、網站開發服務、備份備援、郵件伺服務器及其他等規劃與採購服務。</p>
-                    </div>
-                    <div id = "Service02" class="indexContent">
-                        <img class ="indexicon" src="../img/index/icon02.png">
-                        <h3 class="indexh3">雲端銷售服務</h3>
-                        <p class="indexp">凱茂資訊為微軟的雲端服務供應商(CSP)，提供Azure、O365、M365、私有雲、混合雲、備份雲的規劃、導入與教育訓練，整合企業內外的Web AP及應用。</p>
-                    </div>
-                    <div  id = "Service03" class="indexContent">
-                        <img class ="indexicon" src="../img/index/icon03.png">
-                        <h3 class="indexh3">系統整合服務</h3>
-                        <p class="indexp">整合客戶現有資訊架構，根據客戶規模規劃建置適合之資訊系統。</p>
-                    </div>
-                    <div  id = "Service04" class="indexContent">
-                        <img class ="indexicon" src="../img/index/icon04.png">
-                        <h3 class="indexh3">網路規劃服務</h3>
-                        <p class="indexp">以安全層面考量為客戶進行網路架構規畫網路核心設備、建置設備監控主控台，並包含機房機櫃等規劃及建置。</p>
-                    </div>
-                    <div  id = "Service05" class="indexContent">
-                        <img class ="indexicon" src="../img/index/icon05.png">
-                        <h3 class="indexh3">資訊安全服務</h3>
-                        <p class="indexp">因應資安法規，協助客戶資安健檢、弱點掃描、滲透測試、社交工程演練等。提供資安軟硬體產品銷售及資安服務與課程。</p>
-                    </div>
-                    <div  id = "Service06" class="indexContent">
-                        <img class ="indexicon" src="../img/index/icon06.png">
-                        <h3 class="indexh3">技術維護服務</h3>
-                        <p class="indexp">擁有專業的技術團隊，協助客戶規劃與建置安全網路、機房維運與相關軟體售前與售後顧問服務。</p>
+            <div class="container" style="margin-top:2150px">
+                <div class="row">
+                    <div class="col-lg-6">
+                        <div class="ServiceContent">
+                            <h1 class="indexh1">WHAT WE<br>DO.
+                                <h2 class="indexh2">服務項目</h2>
+                                <p class="indexp">青山依舊在，幾度夕陽紅。慣看秋月春風。一壺濁酒喜相逢，浪花淘盡英雄。是非成敗轉頭空，滾滾長江東逝水，白髮漁樵江渚上，古今多少事，都付笑談中。
+                                </p>
+                                <button class="roundbutton" onclick="window.location.href='./Words.html'">查看更多</button>
+                        </div>
+                        <div id="Service01" class="indexContent">
+                            <img class="indexicon" src="../img/index/icon01.png">
+                            <h3 class="indexh3">軟體銷售服務</h3>
+                            <p class="indexp">微軟授權、防毒軟體、Adobe授權、繪圖軟體授權、虛擬化軟體、開發工具軟體、網站開發服務、備份備援、郵件伺服務器及其他等規劃與採購服務。</p>
+                        </div>
+                        <div id="Service02" class="indexContent">
+                            <img class="indexicon" src="../img/index/icon02.png">
+                            <h3 class="indexh3">雲端銷售服務</h3>
+                            <p class="indexp">凱茂資訊為微軟的雲端服務供應商(CSP)，提供Azure、O365、M365、私有雲、混合雲、備份雲的規劃、導入與教育訓練，整合企業內外的Web
+                                AP及應用。</p>
+                        </div>
+                        <div id="Service03" class="indexContent">
+                            <img class="indexicon" src="../img/index/icon03.png">
+                            <h3 class="indexh3">系統整合服務</h3>
+                            <p class="indexp">整合客戶現有資訊架構，根據客戶規模規劃建置適合之資訊系統。</p>
+                        </div>
+                        <div id="Service04" class="indexContent">
+                            <img class="indexicon" src="../img/index/icon04.png">
+                            <h3 class="indexh3">網路規劃服務</h3>
+                            <p class="indexp">以安全層面考量為客戶進行網路架構規畫網路核心設備、建置設備監控主控台，並包含機房機櫃等規劃及建置。</p>
+                        </div>
+                        <div id="Service05" class="indexContent">
+                            <img class="indexicon" src="../img/index/icon05.png">
+                            <h3 class="indexh3">資訊安全服務</h3>
+                            <p class="indexp">因應資安法規，協助客戶資安健檢、弱點掃描、滲透測試、社交工程演練等。提供資安軟硬體產品銷售及資安服務與課程。</p>
+                        </div>
+                        <div id="Service06" class="indexContent">
+                            <img class="indexicon" src="../img/index/icon06.png">
+                            <h3 class="indexh3">技術維護服務</h3>
+                            <p class="indexp">擁有專業的技術團隊，協助客戶規劃與建置安全網路、機房維運與相關軟體售前與售後顧問服務。</p>
                             <br><br><br><br><br><br><br>
+                        </div>
+                        <br><br><br><br><br>
                     </div>
-                    <br><br><br><br><br>
+                    <!-- 到時候替換動畫效果 -->
+                    <div class="col-lg-6 d-flex indexImgDiv">
+                        <img id="indexImg" src="../img/index/index01.png">
+                    </div>
                 </div>
-                <!-- 到時候替換動畫效果 -->
-                <div class="col-lg-6 d-flex indexImgDiv">
-                    <img id="indexImg" src = "../img/index/index01.png">
-                </div>
-            </div>
 
-        </div>
+            </div>
         </div>
 
         <!-- 最新消息 -->
-        <div class="container-fluid indexNews" >
+        <div class="container-fluid indexNews">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-7 d-flex" style="background-color:#f3f3f3; height:400px; margin-top: 100px">
@@ -134,7 +137,7 @@
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                             allowfullscreen></iframe>
                     </div>
-                    <div data-aos="fade-left" class="col-lg-5" >
+                    <div data-aos="fade-left" class="col-lg-5">
                         <div style="padding:80px; margin-top: 20px;margin-bottom: 10px;">
                             <h1 class="indexh1">WHAT's<br>NEWS.
                                 <h2 class="indexh2">最新消息</h2>
@@ -150,14 +153,14 @@
                     <div class="row row-cols-1 row-cols-sm-2 row-cols-lg-3 g-3">
                         <div class="col">
                             <div class="card shadow-sm px-3 py-2" data-aos="fade-up" data-aos-delay="100">
-                                <div class="card-body" >
+                                <div class="card-body">
                                     <h3 class="indexh3">標題標題</h3>
                                     <hr>
                                     <p class="indexp2">
                                         青山依舊在，幾度夕陽紅。慣看秋月春風。一壺濁酒喜相逢。青山依舊在，幾度夕陽紅。青山依舊在，幾度夕陽紅。慣看秋月春風。一壺濁酒喜相逢。青山依舊在，幾度夕陽紅。青山依舊在，幾度夕陽紅。慣看秋月春風。一壺濁酒喜相逢。青山依舊在，幾度夕陽紅。
                                     </p>
                                     <div class="d-flex justify-content-between align-items-center">
-                                        <small class = "smallDate">2020-20-20</small>
+                                        <small class="smallDate">2020-20-20</small>
                                         <div class="btn-group">
                                             <button type="button" class="btn btn-sm btn-outline-secondary">查看更多</button>
                                         </div>
@@ -167,14 +170,14 @@
                         </div>
                         <div class="col">
                             <div class="card shadow-sm px-3 py-2" data-aos="fade-up" data-aos-delay="200">
-                                <div class="card-body" >
+                                <div class="card-body">
                                     <h3 class="indexh3">標題標題</h3>
                                     <hr>
                                     <p class="indexp2">
                                         青山依舊在，幾度夕陽紅。慣看秋月春風。一壺濁酒喜相逢。青山依舊在，幾度夕陽紅。青山依舊在，幾度夕陽紅。慣看秋月春風。一壺濁酒喜相逢。青山依舊在，幾度夕陽紅。青山依舊在，幾度夕陽紅。慣看秋月春風。一壺濁酒喜相逢。青山依舊在，幾度夕陽紅。
                                     </p>
                                     <div class="d-flex justify-content-between align-items-center">
-                                        <small class = "smallDate">2020-20-20</small>
+                                        <small class="smallDate">2020-20-20</small>
                                         <div class="btn-group">
                                             <button type="button" class="btn btn-sm btn-outline-secondary">查看更多</button>
                                         </div>
@@ -184,14 +187,14 @@
                         </div>
                         <div class="col">
                             <div class="card shadow-sm px-3 py-2" data-aos="fade-up" data-aos-delay="300">
-                                <div class="card-body" >
+                                <div class="card-body">
                                     <h3 class="indexh3">標題標題</h3>
                                     <hr>
                                     <p class="indexp2">
                                         青山依舊在，幾度夕陽紅。慣看秋月春風。一壺濁酒喜相逢。青山依舊在，幾度夕陽紅。青山依舊在，幾度夕陽紅。慣看秋月春風。一壺濁酒喜相逢。青山依舊在，幾度夕陽紅。
                                     </p>
                                     <div class="d-flex justify-content-between align-items-center">
-                                        <small class = "smallDate">2020-20-20</small>
+                                        <small class="smallDate">2020-20-20</small>
                                         <div class="btn-group">
                                             <button type="button" class="btn btn-sm btn-outline-secondary">查看更多</button>
                                         </div>
@@ -208,9 +211,10 @@
         <!-- aboutus -->
         <div class="container-fluid">
             <div class="row">
-                <div  class="col-lg-6 d-flex align-items-center justify-content-center"style="background-color: #ffffff; ">
+                <div class="col-lg-6 d-flex align-items-center justify-content-center"
+                    style="background-color: #ffffff; ">
                     <div data-aos="fade-right" class="m-5 p-4" style="width: 500px;">
-                        <h1 class="indexh1" >ABOUT<br>US.
+                        <h1 class="indexh1">ABOUT<br>US.
                             <h2 class="indexh2">關於我們</h2>
                             <p class="indexp">青山依舊在，幾度夕陽紅。慣看秋月春風。一壺濁酒喜相逢，浪花淘盡英雄。是非成敗轉頭空，滾滾長江東逝水，白髮漁樵江渚上，古今多少事，都付笑談中。
                             </p>
