--- a/html/news.html
+++ b/html/news.html
@@ -158,7 +158,7 @@
                     <div class="card-img-overlay">
                         <h3 class="card-title indexh3">軟體銷售服務</h3>
                         <p class="card-text indexp3 txtIn">
-                            微軟授權、防毒軟體、Adobe授權、繪圖軟體授權、虛擬軟體、開發工具、備份備援、郵件伺服器及其他等規劃與採購服務。
+                            微軟授權、防毒軟體、Adobe授權、繪圖軟體授權、虛擬軟體、開發工具、備份備援、郵件伺服器及其他服務。
                         </p>
                     </div>
                 </div>
