--- a/html/contact.html
+++ b/html/contact.html
@@ -107,7 +107,9 @@
 
                     </div>
                     <input type="submit" class="btn btn-primary btn-block" value="SEND">
+
                 </form>
+                <!-- <button onclick="test()" value="TEST">TEST</button> test -->
             </div>
             <div class="col-xl p-3 mt-5">
                 <div id="map" class="border">
@@ -149,9 +151,22 @@
 
 
     <script>
-        
+
+
         function SubmitForm() {
             alert("非常感謝您的來信,本公司將儘快回覆，謝謝！");
+
+            // var formData = $("form").serializeArray();
+            // $.ajax({
+            //     type: 'POST',
+            //     url: 'php\form.php',
+            //     data: formData,
+            //     success: function (res) {
+
+            //         alert(res)
+            //         // alert("非常感謝您的來信,本公司將儘快回覆，謝謝！"); // 接回成功後會有回傳值
+            //     }
+            // })
         }
 
         $(function () {
