--- a/html/contact.html
+++ b/html/contact.html
@@ -47,13 +47,23 @@
         </div>
     </div>
 
-    <div id="header">
+    <div class="contactBanner">
+        <img src="../img/logo/verticle01.png">
+    </div>
+
+    <!-- <div id="header">
         <div id="headerContent">
             <img src="../img/logo/verticle01.png">
             <h1>
                 GET IN TOUCH
             </h1>
             <p>聯絡我們</p>
+        </div>
+    </div> -->
+    <div class="mb-5 pt-5">
+        <div class="container text-center">
+            <h1 class="indexh1">GET IN TOUCH</h1>
+            <h2 class="indexh2 mb-5">聯絡我們</h2>
         </div>
     </div>
     <div id="content" class="container mb-5">
