--- a/html/index.html
+++ b/html/index.html
@@ -62,7 +62,15 @@
             <img class="animateImagebg" src="../img/indexanimation/004.jpg" type="img/jepg" />
             <div id="animation-bg"></div>
 
+            <div class="scroll-downs">
+                <div class="mousey">
+                    <div class="scroller"></div>
+                </div>
+                    <h4 class="indexp3">SCROLL</h4>
+                </div>
+            </div>    
         </div>
+
         <div class="introContent">
             <div data-aos="fade-up">
                 <h2 class="h2intro01">Take KAIMAU,<br>Take the Future.</h2>
