--- a/html/contact.html
+++ b/html/contact.html
@@ -32,7 +32,11 @@
 <body>
 
     <input type="checkbox" id="active">
-    <label for="active" class="menu-btn"><span></span></label>
+    <label for="active" class="menu-btn">
+        <span></span>
+        <span></span>  <!-- 3個span-->
+        <span></span>
+    </label>
     <label for="active" class="close"></label>
     <div class="wrapper">
         <div class="wapperContent">
