--- a/html/index.html
+++ b/html/index.html
@@ -38,12 +38,16 @@
 
     <body>
         <input type="checkbox" id="active">
-        <label for="active" class="menu-btn"><span></span></label>
+        <label for="active" class="menu-btn">
+            <span></span>
+            <span></span>  <!-- 3個span-->
+            <span></span>
+        </label>
         <label for="active" class="close"></label>
         <div class="wrapper">
             <div class="wapperContent">
                 <img src="../img/logo/only-logo.png" style="width:80px;position: absolute;position:0px 0px;">
-
+    
                 <div class="wapperContentWord">
                     <a href="./index.html">HOME</a><br>
                     <a href="./aboutus.html">ABOUT</a><br>
@@ -89,7 +93,7 @@
                                 <h2 class="indexh2">服務項目</h2>
                                 <p class="indexp">青山依舊在，幾度夕陽紅。慣看秋月春風。一壺濁酒喜相逢，浪花淘盡英雄。是非成敗轉頭空，滾滾長江東逝水，白髮漁樵江渚上，古今多少事，都付笑談中。
                                 </p>
-                                <button class="roundbutton" onclick="window.location.href='./Words.html'">查看更多</button>
+                                <button class="roundbutton" onclick="window.location.href='./news.html'">查看更多</button>
                         </div>
                         <div id="Service01" class="indexContent">
                             <img class="indexicon" src="../img/index/icon01.png">
@@ -150,7 +154,7 @@
                             <h1 class="indexh1">WHAT's<br>NEWS.
                                 <h2 class="indexh2">最新消息</h2>
                                 <p class="indexp">青山依舊在，幾度夕陽紅。慣看秋月春風。一壺濁酒喜相逢。</p>
-                                <button class="roundbutton" onclick="window.location.href='./Words.html'">查看更多</button>
+                                <button class="roundbutton" onclick="window.location.href='./news.html'">查看更多</button>
                         </div>
                     </div>
                 </div>
@@ -226,7 +230,7 @@
                             <h2 class="indexh2">關於我們</h2>
                             <p class="indexp">青山依舊在，幾度夕陽紅。慣看秋月春風。一壺濁酒喜相逢，浪花淘盡英雄。是非成敗轉頭空，滾滾長江東逝水，白髮漁樵江渚上，古今多少事，都付笑談中。
                             </p>
-                            <button class="roundbutton" onclick="window.location.href='./Words.html'">認識凱茂</button>
+                            <button class="roundbutton" onclick="window.location.href='./aboutus.html'">認識凱茂</button>
                     </div>
 
                 </div>
@@ -263,7 +267,7 @@
     </body>
 
     <script src="../js/app.js"></script>
-    <script src="../js/navbar.js"></script>
+    <script src="../js/navbarIndex.js"></script>
 
     <script>AOS.init();</script>
 
