--- a/html/news.html
+++ b/html/news.html
@@ -28,7 +28,11 @@
 <body>
     <!-- hamberger -->
     <input type="checkbox" id="active">
-    <label for="active" class="menu-btn"><span></span></label>
+    <label for="active" class="menu-btn">
+        <span></span>
+        <span></span>  <!-- 3個span-->
+        <span></span>
+    </label>
     <label for="active" class="close"></label>
     <div class="wrapper">
         <div class="wapperContent">
