kaimau to kaimo

--- a/html/aboutus.html
+++ b/html/aboutus.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>凱茂資訊 ABOUT US</title>
+    <title>楷模資訊 ABOUT US</title>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.11.5/uxl/popper.min.js"></script>
@@ -49,16 +49,16 @@
         <img src="../img/logo/verticle01.png">
     </div>
 
-    <!-- 關於凱茂 -->
+    <!-- 關於楷模 -->
     <div class="container-fluid aboutMain">
         <div class="container vh-80">
             <div class="row">
                 <div class="col-lg-6 my-5 aboutContent">
                     <h1 class="indexh1">ABOUT <br />US.</h1>
-                    <h3 class="indexh2">關於凱茂</h3>
-                    <p class="indexp txtIn">凱茂資訊 成立於2009年，迄今已成為多家知名軟、硬體大廠之大型客戶承銷商。目前除了臺中總部，服務耕耘客群也遍及全國北中南。</p>
+                    <h3 class="indexh2">關於楷模</h3>
+                    <p class="indexp txtIn">楷模資訊 成立於2009年，迄今已成為多家知名軟、硬體大廠之大型客戶承銷商。目前除了臺中總部，服務耕耘客群也遍及全國北中南。</p>
                     <p class="indexp txtIn">
-                        凱茂團隊以即時且反應迅速服務機制，協助客戶於最快時間獲得問題解答與排除，以及在需求時間內到場技術支援服務，另外針對客戶不同需求來提供相對應解決方案的顧問服務及專案建置。</p>
+                        楷模團隊以即時且反應迅速服務機制，協助客戶於最快時間獲得問題解答與排除，以及在需求時間內到場技術支援服務，另外針對客戶不同需求來提供相對應解決方案的顧問服務及專案建置。</p>
                 </div>
 
                 <div class="col-lg-6 KAIMAUDiv">
@@ -334,15 +334,15 @@
     </div>
 
 
-    <!-- 凱茂理念 -->
+    <!-- 楷模理念 -->
     <div class="container-fluid" style="background-color: #ffffff;">
         <div class="container mt-5 aboutContent">
             <div class="row">
                 <div data-aos="fade-right" class="col-lg-6">
-                    <h2 class="indexh2">凱茂理念</h2>
-                    <h1 class="indexh1">Take KAIMAU<br />Take the Future.</h1>
+                    <h2 class="indexh2">楷模理念</h2>
+                    <h1 class="indexh1">Take KAIMO<br />Take the Future.</h1>
                     <p class="indexp txtIn">
-                        資安議題日漸受重視，資訊安全的威脅無所不在，不論是企業或是政府組織，潛藏在暗處的惡意攻擊者都是一視同仁，凱茂資訊洞察產業趨勢與眾多資訊安全系統的原廠及代理商合作，針對不同產業對資安的需求，依照客戶的情境提出精準完整的解決方案。
+                        資安議題日漸受重視，資訊安全的威脅無所不在，不論是企業或是政府組織，潛藏在暗處的惡意攻擊者都是一視同仁，楷模資訊洞察產業趨勢與眾多資訊安全系統的原廠及代理商合作，針對不同產業對資安的需求，依照客戶的情境提出精準完整的解決方案。
                     </p>
                 </div>
 
@@ -355,8 +355,8 @@
                                 <h4>Take the Future</h4>
                             </span>
                             <span style="--i:1">
-                                <h4>Take KAIMAU</h4>
-                                <h4>Take KAIMAU</h4>
+                                <h4>Take KAIMO</h4>
+                                <h4>Take KAIMO</h4>
                             </span>
 
                             <span style="--i:2">
@@ -365,8 +365,8 @@
                             </span>
 
                             <span style="--i:3">
-                                <h4>Take KAIMAU</h4>
-                                <h4>Take KAIMAU</h4>
+                                <h4>Take KAIMO</h4>
+                                <h4>Take KAIMO</h4>
                             </span>
                         </div>
                     </div>
@@ -379,8 +379,8 @@
                                 <h2>Take<br />the<br />Future</h2>
                             </span>
                             <span style="--i:1">
-                                <h2>Take KAIMAU</h2>
-                                <h2>Take KAIMAU</h2>
+                                <h2>Take KAIMO</h2>
+                                <h2>Take KAIMO</h2>
                             </span>
 
                             <span style="--i:2">
@@ -389,8 +389,8 @@
                             </span>
 
                             <span style="--i:3">
-                                <h2>Take KAIMAU</h2>
-                                <h2>Take KAIMAU</h2>
+                                <h2>Take KAIMO</h2>
+                                <h2>Take KAIMO</h2>
                             </span>
                         </div>
                     </div>
@@ -403,8 +403,8 @@
                                 <h2>Take <br /> the<br /> Future</h2>
                             </span>
                             <span style="--i:1">
-                                <h2>Take <br /> KAIMAU</h2>
-                                <h2>Take <br /> KAIMAU</h2>
+                                <h2>Take <br /> KAIMO</h2>
+                                <h2>Take <br /> KAIMO</h2>
                             </span>
 
                             <span style="--i:2">
@@ -413,8 +413,8 @@
                             </span>
 
                             <span style="--i:3">
-                                <h2>Take <br /> KAIMAU</h2>
-                                <h2>Take <br /> KAIMAU</h2>
+                                <h2>Take <br /> KAIMO</h2>
+                                <h2>Take <br /> KAIMO</h2>
                             </span>
                         </div>
                     </div>
@@ -453,9 +453,9 @@
             <div class="section">
                 <div class="bead"></div>
                 <div class="content-timeline txtR">
-                    <img src="../img/logo/color-whitebg.jpg">
+                    <img src="../img/logo/color-whitebg.png">
                     <h2 class='indexh2'>2009年</h2>
-                    <p class="indexptimeline">凱茂資訊股份有限公司成立。</p>
+                    <p class="indexptimeline">楷模資訊股份有限公司成立。</p>
                 </div>
             </div>
 
@@ -513,7 +513,7 @@
     <footer>
         <div class="container-fluid footer">
             <div style="text-align:center; width:100% ;margin:auto;">
-                <img src="../images/logo-gray.png" style="height: 40px; margin:20px">
+                <img src="../img/logo/logo-gray.png" style="height: 40px; margin:20px">
                 <hr>
                 <a href="./index.html" class="m-2">HOME</a>
                 <a href="./aboutus.html" class="m-2">ABOUT</a>
@@ -521,7 +521,7 @@
                 <a href="./contact.html" class="m-2">CONTACT</a>
                 <br>
                 <br>
-                <p style="font-size:14px; color:#a2a2a2">&copy; 2022 凱茂資訊 </p>
+                <p style="font-size:14px; color:#a2a2a2">&copy; 2022 楷模資訊 </p>
             </div>
         </div>
     </footer>
