--- a/html/contact.html
+++ b/html/contact.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>凱茂資訊 GET IN TOUCH</title>
+    <title>楷模資訊 GET IN TOUCH</title>
 
     <style>
         @import url('[https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@100;300;400;500;700;900&family=Noto+Serif+TC:wght@200&display=swap](https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@100;300;400;500;700;900&family=Noto+Serif+TC:wght@200&display=swap)');
@@ -150,7 +150,7 @@
     <footer>
         <div class="container-fluid footer">
             <div style="text-align:center; width:100% ;margin:auto;">
-                <img src="../images/logo-gray.png" style="height: 40px; margin:20px">
+                <img src="../img/logo/logo-gray.png" style="height: 40px; margin:20px">
                 <hr>
                 <a href="./index.html" class="m-2">HOME</a>
                 <a href="./aboutus.html" class="m-2">ABOUT</a>
@@ -158,7 +158,7 @@
                 <a href="./contact.html" class="m-2">CONTACT</a>
                 <br>
                 <br>
-                <p style="font-size:14px; color:#a2a2a2">&copy; 2022 凱茂資訊 </p>
+                <p style="font-size:14px; color:#a2a2a2">&copy; 2022 楷模資訊 </p>
             </div>
         </div>
     </footer>
