--- a/html/index.html
+++ b/html/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>凱茂資訊 KAIMAU CORP.</title>
+    <title>楷模資訊 KAIMO CORP.</title>
     <link rel="stylesheet" href="../css/utilities.css">
     <link rel="stylesheet" href="https://cdn.usebootstrap.com/bootstrap/4.4.1/css/bootstrap.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
@@ -32,7 +32,7 @@
 <body>
 
 
-    <title>凱茂資訊</title>
+    <title>楷模資訊</title>
 
     </head>
 
@@ -59,7 +59,7 @@
 
 
         <div>
-            <h2 class="h2intro">Welcome To KAIMAU.</h2>
+            <h2 class="h2intro">Welcome To KAIMO.</h2>
         </div>
         <div class="indexanimate">
             <div class="overlay"></div>
@@ -77,8 +77,8 @@
 
         <div class="introContent">
             <div data-aos="fade-up">
-                <h2 class="h2intro01">Take KAIMAU,<br>Take the Future.</h2>
-                <h2 class="h2intro02">凱茂資訊</h2>
+                <h2 class="h2intro01">Take KAIMO,<br>Take the Future.</h2>
+                <h2 class="h2intro02">楷模資訊</h2>
             </div>
         </div>
 
@@ -103,7 +103,7 @@
                         <div id="Service02" class="indexContent">
                             <img class="indexicon" src="../img/index/icon02.png">
                             <h3 class="indexh3">雲端銷售服務</h3>
-                            <p class="indexp">凱茂資訊為微軟的雲端服務供應商(CSP)，提供Azure、O365、M365、私有雲、混合雲、備份雲的規劃、導入與教育訓練，整合企業內外的Web
+                            <p class="indexp">楷模資訊為微軟的雲端服務供應商(CSP)，提供Azure、O365、M365、私有雲、混合雲、備份雲的規劃、導入與教育訓練，整合企業內外的Web
                                 AP及應用。</p>
                         </div>
                         <div id="Service03" class="indexContent">
@@ -230,7 +230,7 @@
                             <h2 class="indexh2">關於我們</h2>
                             <p class="indexp">青山依舊在，幾度夕陽紅。慣看秋月春風。一壺濁酒喜相逢，浪花淘盡英雄。是非成敗轉頭空，滾滾長江東逝水，白髮漁樵江渚上，古今多少事，都付笑談中。
                             </p>
-                            <button class="roundbutton" onclick="window.location.href='./aboutus.html'">認識凱茂</button>
+                            <button class="roundbutton" onclick="window.location.href='./aboutus.html'">認識楷模</button>
                     </div>
 
                 </div>
@@ -248,7 +248,7 @@
         <footer>
             <div class="container-fluid footer">
                 <div style="text-align:center; width:100% ;margin:auto;">
-                    <img src="../images/logo-gray.png" style="height: 40px; margin:20px">
+                    <img src="../img/logo/logo-gray.png" style="height: 40px; margin:20px">
                     <hr>
                     <a href="./index.html" class="m-2">HOME</a>
                     <a href="./aboutus.html" class="m-2">ABOUT</a>
@@ -256,7 +256,7 @@
                     <a href="./contact.html" class="m-2">CONTACT</a>
                     <br>
                     <br>
-                    <p style="font-size:14px; color:#a2a2a2">&copy; 2022 凱茂資訊 </p>
+                    <p style="font-size:14px; color:#a2a2a2">&copy; 2022 楷模資訊 </p>
                 </div>
             </div>
         </footer>
