--- a/html/news.html
+++ b/html/news.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>凱茂資訊 WHATS NEWS</title>
+    <title>楷模資訊 WHATS NEWS</title>
 
     <link rel="stylesheet" href="../css/utilities.css">
     <link rel="stylesheet" href="https://cdn.usebootstrap.com/bootstrap/4.4.1/css/bootstrap.min.css">
@@ -151,7 +151,7 @@
                 <h1 class="indexh1 mt-5 text-center">WHAT WE DO.</h1>
                 <h2 class="indexh2 mt-5 text-center">服務項目</h2>
                 <p class="indexp mt-3 px-30 text-center">
-                    凱茂資訊，能依客戶實際需求規劃最適合的解決方案，如主機虛擬化、郵件伺服器、備份備援、雲端運算、端點管理、網通架構、資訊安全等規劃......
+                    楷模資訊，能依客戶實際需求規劃最適合的解決方案，如主機虛擬化、郵件伺服器、備份備援、雲端運算、端點管理、網通架構、資訊安全等規劃......
                 </p>
             </div>
 
@@ -171,7 +171,7 @@
                     <div class="card-img-overlay">
                         <h3 class="card-title indexh3">雲端銷售服務</h3>
                         <p class="card-text indexp3 txtIn">
-                            凱茂資訊為微軟的雲端服務供應商(CSP),提供Azure、O365、M365、私有雲、混合雲、備份雲的規劃、導入與教育訓練。</p>
+                            楷模資訊為微軟的雲端服務供應商(CSP),提供Azure、O365、M365、私有雲、混合雲、備份雲的規劃、導入與教育訓練。</p>
                     </div>
                 </div>
                 <div class="col card py-3">
@@ -216,7 +216,7 @@
             <div class="mt-5">
                 <h2 class="indexh2 text-center">客戶個案</h2>
                 <p class="indexp px-30 txtIn">
-                    凱茂業界深耕多年，具備專業且豐富建置經驗，熟悉原廠及代理通路最新，且能確切執行並解決客戶需求之能力。提供客戶完整解決方案，無論是何種產業別，均能量身規劃，滿足各種跨整合需求。</p>
+                    楷模業界深耕多年，具備專業且豐富建置經驗，熟悉原廠及代理通路最新，且能確切執行並解決客戶需求之能力。提供客戶完整解決方案，無論是何種產業別，均能量身規劃，滿足各種跨整合需求。</p>
             </div>
 
             <div class="row mt-5">
@@ -262,7 +262,7 @@
                 <div class="col-lg-10">
                     <h1 class="indexh1">OUR<br />PRODUCT</h1>
                     <h2 class="indexh2">產品資訊</h2>
-                    <p class="indexp txtIn">凱茂資訊，能依客戶實際需求規劃最適合的解決方案，如主機虛擬化、郵件伺服器、備份備援、雲端運算、端點管理、網通架構、資訊安全等規劃......。
+                    <p class="indexp txtIn">楷模資訊，能依客戶實際需求規劃最適合的解決方案，如主機虛擬化、郵件伺服器、備份備援、雲端運算、端點管理、網通架構、資訊安全等規劃......。
                     </p>
                 </div>
 
@@ -501,7 +501,7 @@
     <footer>
         <div class="container-fluid footer">
             <div style="text-align:center; width:100% ;margin:auto;">
-                <img src="../images/logo-gray.png" style="height: 40px; margin:20px">
+                <img src="../img/logo/logo-gray.png" style="height: 40px; margin:20px">
                 <hr>
                 <a href="./index.html" class="m-2">HOME</a>
                 <a href="./aboutus.html" class="m-2">ABOUT</a>
@@ -509,7 +509,7 @@
                 <a href="./contact.html" class="m-2">CONTACT</a>
                 <br>
                 <br>
-                <p style="font-size:14px; color:#a2a2a2">&copy; 2022 凱茂資訊 </p>
+                <p style="font-size:14px; color:#a2a2a2">&copy; 2022 楷模資訊 </p>
             </div>
         </div>
     </footer>
